k8s/staging/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staging-devops-task-backend-svc
spec:
  selector:
    app: staging-devops-task-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
